<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="font_family_button_material">sans-serif-medium</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="oneplus_contorl_font_family_display4">Slate-light</string>
    <string name="oneplus_contorl_font_family_display3">Slate-regular</string>
    <string name="oneplus_contorl_font_family_display2">Slate-regular</string>
    <string name="oneplus_contorl_font_family_display1">Slate-regular</string>
    <string name="oneplus_contorl_font_family_headline">Slate-regular</string>
    <string name="oneplus_contorl_font_family_title">Slate-regular</string>
    <string name="oneplus_contorl_font_family_title_extended">Slate-regular</string>
    <string name="oneplus_contorl_font_family_subheading">Slate-book</string>
    <string name="oneplus_contorl_font_family_subtitle">Slate-medium</string>
    <string name="oneplus_contorl_font_family_body2">Slate-medium</string>
    <string name="oneplus_contorl_font_family_body1">Slate-book</string>
    <string name="oneplus_contorl_font_family_button">Slate-medium</string>
    <string name="oneplus_contorl_font_family_descriptions">Slate-regular</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="capital_on">ON</string>
    <string name="capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">com.oneplus.lib.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="doze_pickup_subtype_performs_proximity_check" />
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="clock_12hr_format">hm</string>
    <string name="clock_24hr_format">Hm</string>
    <string name="volume_slient">Silent</string>
    <string name="volume_vibrate">Vibrate</string>
    <string name="volume_no_disturb">Do not disturb</string>
    <string name="volume_ring">Ring</string>
    <string name="oneplus_aod_settings">Ambient display</string>
    <string name="oneplus_aod_title">Show clock</string>
    <string name="oneplus_aod_display_mode_title">When to show</string>
    <string name="oneplus_aod_display_period_title">Display period</string>
    <string name="oneplus_aod_clock_style_title">Clock style</string>
    <string name="oneplus_aod_display_text_title">Display message</string>
    <string name="oneplus_aod_auto_wake_screen_title">New Notifications</string>
    <string name="oneplus_aod_auto_wake_screen_summary">Wake screen when you receive notifications</string>
    <string name="oneplus_aod_mode_always_on">Always on</string>
    <string name="oneplus_aod_mode_lift_up">Lift up display</string>
    <string name="oneplus_display_time_start">From</string>
    <string name="oneplus_display_time_end">To</string>
    <string name="oneplus_display_time_from">From</string>
    <string name="oneplus_display_time_to">to</string>
    <string name="aod_clock_select_action_bar_title">Clock style</string>
    <string name="aod_clock_preview_action_bar_title">Preview</string>
    <string name="aod_clock_select_style_text">Select the clock style</string>
    <string name="aod_clock_selected">SELECTED</string>
    <string name="aod_clock_default">Default</string>
    <string name="aod_clock_classic">Classic</string>
    <string name="aod_clock_analog">Analog</string>
    <string name="aod_clock_digital">Digital</string>
    <string name="owner_info_settings_summary">None</string>
    <string name="owner_info_settings_edit_text_hint">E.g., Joe’s Android.</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="time_format_12_mode">h:mm a</string>
    <string name="app_name">OPAod</string>
    <string name="service_name">notification</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="more_icon">more</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="battery_meter_very_low_overlay_symbol">!</string>
    <string name="keyguard_widget_12_hours_format">hmm</string>
    <string name="keyguard_widget_24_hours_format">kkmm</string>
    <string name="aod_settings">Always on display</string>
    <string name="keywords_display">screen, touchscreen</string>
    <string name="aod_title">Always on display</string>
</resources>
